--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -12,13 +12,16 @@ h1{
     font-size: 1.75em;
 }
 
-section{
+div{
+
     float : left;
+    padding: 15px;
+}
+section{
     position : relative;
     border : 1px solid black;
     background-color: #cecece;
     padding : 5px;
-    margin : 2%;
     
 }
 
@@ -54,16 +57,24 @@ p{
 
 
 
+
+
+
+
 @media (min-width: 992px ){
-    section{
+    /*section{
         width : 31.33%;
         margin-left : 1%;
         margin-right:1%;
+    }*/
+    .col-4{
+        width : 33%;
+        padding : 5px;
     }
 
 }
 @media (min-width: 768px) and (max-width : 991px){
-    section{
+    /*section{
         width : 48%;
         margin-left : 1%;
         margin-right : 1%;
@@ -72,7 +83,16 @@ p{
         width : 98%;
         margin-left : 1%;
         margin-right : 1%;
+    }*/
+    .col-6{
+        width : 50%;
+        padding : 10px;
     }
+    .col-12{
+        width : 100%;
+        padding : 10px;
+    }
+    
 
 }
 @media (max-width : 767px){
